[gd_scene load_steps=3 format=3 uid="uid://dlgon3cgxjjtk"]

[ext_resource type="Script" path="res://InDevelopment/Grief/ShadowCollectionArea/ShadowSuctionArea/suction_area.gd" id="1_ptsfn"]
[ext_resource type="PackedScene" uid="uid://bb11ogcbh4hr7" path="res://InDevelopment/CollisionShapes/CollisionArc2D/collision_arc_2d.tscn" id="2_va20e"]

[node name="SuctionArea" type="Area2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_ptsfn")
radius = 100.0
spread = 15.0

[node name="CollisionArc2D" parent="." instance=ExtResource("2_va20e")]
polygon = PackedVector2Array(0, 0, 99.1445, -13.0526, 99.1445, 13.0526)
disabled = true
radius = 100.0
spread = 15.0

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
